--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-Hello World
+<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/avartar 2x.png"><title>new-project</title><link href="/css/app.491a832b.css" rel="preload" as="style"><link href="/css/chunk-vendors.c470e980.css" rel="preload" as="style"><link href="/js/app.1f2797c4.js" rel="preload" as="script"><link href="/js/chunk-vendors.06f386f7.js" rel="preload" as="script"><link href="/css/chunk-vendors.c470e980.css" rel="stylesheet"><link href="/css/app.491a832b.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but new-project doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/js/chunk-vendors.06f386f7.js"></script><script src="/js/app.1f2797c4.js"></script></body><style>body{
+      margin:0px;
+      font-family: PingFang TC;
+    }</style></html>
